# spec-agent-skills

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json
skills/requirement-review/: SKILL.md
skills/requirements-engineering/: SKILL.md
skills/requirements-engineering/assets/: spec-template.md
skills/requirements-engineering/references/: speckit.requirements.clarify.md
src/spec_agent_skills/: __init__.py  models.py  parser.py  prompt.py  registry.py
tests/: conftest.py  test_models.py  test_parser.py  test_prompt.py  test_registry.py  test_tools.py  test_validation.py
