[project]
name = "spec-agent-skills-workspace"
version = "0.0.0"
description = "Agent Skills monorepo workspace"
requires-python = ">=3.13"
dependencies = [
    "agent-skills",
    "personas"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agent-skills = { workspace = true }
personas = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]
